--- a/styles.css
+++ b/styles.css
@@ -167,3 +167,23 @@ li {
     color: lightgray;
     font-family: var(--fonte-texto);
 }
+
+@media screen and (max-width: 724px) {
+    main {
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        border-radius: 0;
+        /* gap: 3rem; */
+        padding-top: 30%;
+    }
+
+    .input-item {
+        margin-bottom: 10px;
+    }
+
+    h2 {
+        margin-top: 4rem;
+        margin-bottom: 20px;
+    }
+}
